--- a/.github/workflows/mody-dev.yml
+++ b/.github/workflows/mody-dev.yml
@@ -35,6 +35,18 @@ jobs:
           echo "${{ secrets.DEV_YML }}" >> ./application.yml
         shell: bash # 스크립트가 Bash 셸에서 실행
 
+      # 1-2-1 start.sh 파일 생성
+      - name: make start.sh
+        run: |
+          # create start.sh
+          cd ./scripts
+
+          # start.sh 파일 생성하기
+          touch ./start.sh
+
+          # Secrets에 저장한 값을 start.sh 파일에 쓰기
+          echo "${{ secrets.START_SH }}" >> ./start.sh
+
       # 1-3. Spring Boot 애플리케이션 빌드
       - name: Build with Gradle
         run: |
@@ -69,6 +81,6 @@ jobs:
       - name: Trigger CodeDeploy Deployment
         run: |
           aws deploy create-deployment \
-            --application-name my-app \
-            --deployment-group-name my-app-group \
+            --application-name mody-server \
+            --deployment-group-name mody-server-group \
             --revision "{\"revisionType\":\"AppSpecContent\",\"appSpecContent\":{\"content\":\"$(cat appspec.yml)\"}}"
