--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	//jwt 사용 0.12.3 버전 사용
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
