✨ [#59] feature: presgined url 이미지 업로드
presigned url을 사용해 이미지를 업로드하는 기능입니다.

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	// AWS 서비스 의존성 추가
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
 
 	//Webflux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
