--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,21 +6,24 @@ services: # 컨테이너 설정
       - SPRING_PROFILES_ACTIVE=dev
     ports:
       - 8000:8000
+    networks:
+      - mody-network
+
   nginx: # Nginx 컨테이너 설정 (certbot은 인증서 발급 시에만 포트를 사용하게 설정)
     image: nginx
     container_name: nginx
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "8443:8443"
-    depends_on:
-      - certbot
+      - "880:80"
+      - "8443:443"
     volumes:
       - ./certbot/conf:/etc/letsencrypt # 파일 설정을 nginx에 마운트 시킴
       - ./certbot/www:/var/www/certbot
-      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf/portainer.mody.server.kkoalla.app.conf:/etc/nginx/conf.d/portainer.mody.server.kkoalla.app.conf
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    networks:
+      - mody-network
 
   certbot:
     image: certbot/certbot
@@ -29,3 +32,7 @@ services: # 컨테이너 설정
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; certbot certonly --manual --preferred-challenges dns --email shimseawon1510@gmail.com -d kkoalla.app -d *.kkoalla.app --agree-tos --no-eff-email; exit;'"
+
+networks:
+  mody-network:
+    driver: bridge
