--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,4 +22,7 @@ spring:
 
 logging:
   level:
-    org.springframework.web: ERROR
+    root: INFO
+    org.springframework: INFO
+    org.springframework.web: DEBUG
+  config: classpath:logback-spring.xml
