--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,4 +24,4 @@ logging:
   level:
     root: INFO
     org.springframework: INFO
-  config: classpath:logback-spring.xml
+  config: classpath:logback-spring-mody.xml
