--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,15 +4,19 @@ services: # 컨테이너 설정
     image: mody-server:dev #ecr에 올린 이미지로 수정 필요
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     ports:
       - 8000:8000
+    depends_on:
+      - redis
     networks:
       - mody-network
 
   nginx: # Nginx 컨테이너 설정 (certbot은 인증서 발급 시에만 포트를 사용하게 설정)
     image: nginx
     container_name: nginx
-    restart: unless-stopped
+    restart: unless-stopped # 컨테이너가 비정상적으로 종료되었을 때 재시작
     ports:
       - "880:80"
       - "8443:443"
@@ -36,10 +40,12 @@ services: # 컨테이너 설정
   redis:
     image: redis
     container_name: redis
+    restart: unless-stopped # 컨테이너가 비정상적으로 종료되었을 때 재시작
     ports:
       - "6379:6379"
     networks:
       - mody-network
+    command: redis-server --appendonly yes # redis 서버가 비정상적으로 종료되었을 때 데이터를 보존하기 위해 설정
   
 networks:
   mody-network:
