🔧 [#105] chore: selenium 의존성 설정
핀터레스트 크롤링을 위한 의존성 설정

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,12 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // Selenium
+    implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
+
+    // WebDriver Manager
+    implementation 'io.github.bonigarcia:webdrivermanager:5.9.0'
 }
 
 tasks.named('test') {
