🔨 [#109] hotfix: Selenium 버전 변경
컨테이너 환경에서 크롬 드라이버 실행을 못 하는 에러를 해결하기 위해 Selenium 버전을 변경하였습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -88,10 +88,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Selenium
-    implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
 
     // WebDriver Manager
-    implementation 'io.github.bonigarcia:webdrivermanager:5.9.0'
+//    implementation 'io.github.bonigarcia:webdrivermanager:5.9.0'
 }
 
 tasks.named('test') {
