--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,6 +18,7 @@ spring:
         format_sql: true
         jdbc:
           time_zone: Asia/Seoul
+        dialect: org.hibernate.dialect.MySQLDialect
 
 logging:
   level:
